--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PaPiin - 免費媒合平台</title>
+    <title>PaPiin - 創作者媒合平台</title>
     <style>
         * {
             margin: 0;
@@ -87,16 +87,15 @@
 
         /* Main Content */
         .main-content {
-            padding: 80px 0;
+            padding: 40px 0;
             text-align: center;
             background: #ffffff;
         }
 
         .hero-section {
-            background: #f2f1f1;
+            background: #ffffff;
             border-radius: 20px;
-            padding: 60px 40px;
-            box-shadow: 0 10px 50px rgba(0, 0, 0, 0.1);
+            padding: 40px;
             margin: 0 auto;
             max-width: 900px;
         }
@@ -105,25 +104,25 @@
             font-size: 36px;
             font-weight: bold;
             color: #2c3e50;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .hero-subtitle {
             font-size: 20px;
             color: #7f8c8d;
-            margin-bottom: 50px;
+            margin-bottom: 30px;
             line-height: 1.6;
         }
 
         .options-container {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            margin-top: 40px;
+            gap: 20px;
+            margin-top: 20px;
         }
 
         .option-card {
-            background: linear-gradient(135deg, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.7));
+            background: #ffffff;
             border-radius: 20px;
             padding: 40px 30px;
             cursor: pointer;
@@ -257,7 +256,7 @@
         /* Responsive Design */
         @media (max-width: 768px) {
             .hero-title {
-                font-size: 36px;
+                font-size: 30px;
             }
 
             .hero-subtitle {
@@ -266,10 +265,36 @@
 
             .options-container {
                 grid-template-columns: 1fr;
+                gap: 20px;
+                padding: 0;
+                margin: 0 -40px;
             }
 
             .option-card {
-                padding: 30px 20px;
+                padding: 20px 20px 20px 15px;
+                display: flex;
+                align-items: center;
+                gap: 15px;
+                width: 100%;
+            }
+
+            .option-icon {
+                margin: 0;
+                width: 80px !important;
+                height: 80px !important;
+            }
+
+            .option-content {
+                text-align: left;
+            }
+
+            .option-title {
+                font-size: 20px;
+                margin-bottom: 8px;
+            }
+
+            .option-description {
+                font-size: 14px;
             }
 
             .footer-content {
@@ -313,10 +338,6 @@
             <div class="logo">
                 <img src="img/logo.png" alt="PaPiin Logo" class="brand-logo">
             </div>
-            <div class="nav-right">
-                <a href="#" class="nav-link">已經有 PaPiin 帳號了？</a>
-                <button class="login-btn">登入</button>
-            </div>
         </nav>
     </div>
 
@@ -324,19 +345,23 @@
         <div class="container">
             <div class="hero-section">
                 <h1 class="hero-title">選擇你的發案方式</h1>
-                <p class="hero-subtitle">免費使用，快到找到合適的合作對象！</p>
+                <p class="hero-subtitle">免費使用，快到找到合作對象！</p>
                 
                 <div class="options-container">
                     <div class="option-card brand" onclick="selectOption('brand')">
                         <img src="img/02.png" alt="Brand Icon" class="option-icon">
-                        <h2 class="option-title">我要媒合</h2>
-                        <p class="option-description">填寫影像需求，平台推薦合適人選</p>
+                        <div class="option-content">
+                            <h2 class="option-title">我要媒合</h2>
+                            <p class="option-description">填寫影像需求，平台推薦合適人選</p>
+                        </div>
                     </div>
                     
                     <div class="option-card creator" onclick="selectOption('creator')">
                         <img src="img/01.png" alt="Creator Icon" class="option-icon">
-                        <h2 class="option-title">我要找人</h2>
-                        <p class="option-description">發布工作需求，讓創作者主動應徵</p>
+                        <div class="option-content">
+                            <h2 class="option-title">我要找人</h2>
+                            <p class="option-description">發布工作需求，讓創作者主動應徵</p>
+                        </div>
                     </div>
                 </div>
             </div>
