Update: Add URL redirects for option cards

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <p class="hero-subtitle">免費使用，快到找到合作對象！</p>
                 
                 <div class="options-container">
-                    <div class="option-card brand" onclick="selectOption('brand')">
+                    <div class="option-card brand" onclick="window.location.href='https://papiin.com/projects'">
                         <img src="img/02.png" alt="Brand Icon" class="option-icon">
                         <div class="option-content">
                             <h2 class="option-title">我要媒合</h2>
@@ -356,7 +356,7 @@
                         </div>
                     </div>
                     
-                    <div class="option-card creator" onclick="selectOption('creator')">
+                    <div class="option-card creator" onclick="window.location.href='https://papiin.com/matching.html'">
                         <img src="img/01.png" alt="Creator Icon" class="option-icon">
                         <div class="option-content">
                             <h2 class="option-title">我要找人</h2>
