--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                     </div>
                     
                     <div class="option-card case" onclick="window.location.href='https://papiin.com/matching.html'">
-                        <img src="img/03.PNG" alt="Case Icon" class="option-icon">
+                        <img src="img/03.png" alt="Case Icon" class="option-icon">
                         <div class="option-content">
                             <h2 class="option-title">應徵案件</h2>
                             <p class="option-description">瀏覽案源，主動尋找工作機會</p>
