更新首頁文案與卡片說明，優化 UX

--- a/index.html
+++ b/index.html
@@ -449,14 +449,14 @@
                         <img src="img/01.png" alt="Creator Icon" class="option-icon">
                         <div class="option-content">
                             <h2 class="option-title">我要刊登</h2>
-                            <p class="option-description">刊登職缺，吸引創作者應徵</p>
+                            <p class="option-description">刊登職缺，吸引人才應徵</p>
                         </div>
                     </div>
                     <div class="option-card case" onclick="window.location.href='https://papiin.com/matching.html'">
                         <img src="img/03.png" alt="Case Icon" class="option-icon">
                         <div class="option-content">
                             <h2 class="option-title">我要應徵</h2>
-                            <p class="option-description">瀏覽案源，主動尋找工作機會</p>
+                            <p class="option-description">瀏覽案源，尋找工作機會</p>
                         </div>
                     </div>
                 </div>
